# staticweaver

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PERFORMANCE.md  README.md  RELEASE_NOTES.md  SECURITY.md  TEMPLATE.md  codecov.yml  crates.js  deny.toml  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  check.yml  ci.yml  coverage.yml  docs.yml  document.yml  fuzz.yml  kani.yml  lint.yml  release.yml
benches/: comparative.rs  template_benchmark.old  template_benchmark.rs
examples/: README.md  async_tokio.rs  axum.rs  cache.rs  cache_example.rs  context.rs  context_example.rs  control_flow.rs  engine.rs  engine_example.rs  error_example.rs  errors.rs  example.rs  filters.rs  hello.rs  inheritance.rs  lib_example.rs  loaders.rs  remote.rs  support.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: dot_path.rs  escape.rs  parse.rs
scripts/: check-version-consistency.sh
search.desc/staticweaver/: staticweaver-desc-0-.js
src/: cache.rs  context.rs  engine.rs  error.rs  lib.rs  loader_async.rs
src/staticweaver/: cache.rs.html  context.rs.html  engine.rs.html  error.rs.html  lib.rs.html
staticweaver/: all.html  index.html  sidebar-items.js
staticweaver/cache/: index.html  struct.Cache.html
staticweaver/context/: index.html  struct.Context.html
staticweaver/engine/: enum.EngineError.html  index.html  sidebar-items.js  struct.Engine.html  struct.PageOptions.html
staticweaver/error/: enum.EngineError.html  enum.TemplateError.html  index.html  sidebar-items.js  type.Result.html
staticweaver/prelude/: index.html
supply-chain/: config.toml
tests/: async_loader.rs  cli_smoke.rs  concurrent_render.rs  context_tests.rs  differential.rs  download_tests.rs  engine_tests.rs  error_tests.rs  lax_mode.rs  proptest_parser.rs  snapshots.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/result/: enum.Result.js
