# -----------------------------------------------------------------------------
# Static Weaver - A powerful and flexible static site generator and templating engine for Rust.
# -----------------------------------------------------------------------------

[package]
# General project metadata
name = "staticweaver"                       # The name of the library
version = "0.0.2"                           # Current version of the crate
authors = ["StaticWeaver Contributors"]     # Library contributors
edition = "2021"                            # Rust edition being used
rust-version = "1.68"                       # MSRV (floor driven by thiserror 2.0 + regex 1.11 + serde_json 1.0)
license = "MIT OR Apache-2.0"               # Dual licensing strategy
description = """
A powerful and flexible static site generator and templating engine for Rust.
"""                                         # Short library description
homepage = "https://staticweaver.com/"             # Project's homepage URL
documentation = "https://staticweaver.com/documentation/index.html" # Doc URL
repository = "https://github.com/sebastienrousseau/staticweaver"    # Repository URL
readme = "README.md"                        # Path to the readme file

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

# Crates.io categories
categories = [
    "data-structures",
    "parsing",
    "encoding",
    "web-programming",
    "development-tools"
]

# Keywords for easier discoverability on Crates.io
keywords = ["cli", "generator", "site", "ssg", "static"]

# Excluding unnecessary files from the package
exclude = [
    "/.git/*",                              # Exclude version control files
    "/.github/*",                           # Exclude GitHub workflows
    "/.gitignore",                          # Ignore Git ignore file
    "/.vscode/*"                            # Ignore VSCode settings
]

# Disable cargo's autodiscovery so `examples/support.rs` (a shared helper
# module, not a binary) is not compiled as an example on its own. The
# real examples are listed explicitly in the `[[example]]` tables below.
autoexamples = false

# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

[lib]
# Library-specific settings
name = "staticweaver"                   # Internal name of the library
path = "src/lib.rs"                     # Path to the library entry point

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
# Optional features that can be enabled or disabled.
default = []                                # No default features enabled
remote-templates = ["dep:reqwest"]          # Fetch templates over HTTP/S via create_template_folder

# Pulls in axum + tokio so `examples/axum.rs` compiles. Opt-in
# because the underlying deps are heavy and not needed for the
# library itself. Run with:
#   cargo run --example axum --features axum-example
axum-example = ["dep:axum", "dep:tokio"]

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------
[dev-dependencies]
# Dependencies required for testing and development.
criterion = "0.5"                           # Benchmarking library to test performance
# mockito powers the remote-templates integration tests: it boots a real
# HTTP server on a random localhost port so `reqwest::blocking` exercises
# the actual wire path (status codes, Content-Type, body limits) without
# depending on a live network.
mockito = "1"

# Comparative benchmarks. Pulled in only for `cargo bench --bench
# comparative` so they don't bloat ordinary test builds. All three are
# runtime / compile-time templating engines we measure ourselves against
# to keep performance claims honest.
tera = { version = "1", default-features = false }
minijinja = "2"
askama = "0.12"

# proptest powers the random-template robustness suite in
# tests/proptest_parser.rs — every parser code path must NEVER panic
# on arbitrary input, only return a clean EngineError.
proptest = "1"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
[dependencies]
# Required dependencies for building and running the project.

fnv = "1.0"                                 # Fast non-cryptographic hash function

# askama_escape is the same SIMD HTML-entity encoder Askama uses for
# its built-in auto-escape, with a 5-character set (& < > " ') matching
# our pre-existing contract. Auto-vectorised inner loop on long strings
# (~3-10x faster than a scalar byte scan). Used only by
# `escape_html_into`.
askama_escape = "0.10"

# reqwest powers the optional remote-template fetcher. Gated behind the
# `remote-templates` feature so the core crate has no networking code in
# its default build. rustls + native-roots avoids pulling OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"], optional = true }

# axum + tokio: only used by examples/axum.rs, gated behind the
# `axum-example` feature. Adds zero weight to the default library
# build because they're optional dependencies.
axum = { version = "0.7", optional = true }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net"], optional = true }

# tempfile is used to create temporary directories for the remote-template
# fetcher. Still needed at runtime for the feature-gated download path.
tempfile = "3.13"

# thiserror provides the derive macro for error types.
thiserror = "2.0"

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------
# Each example uses `#[path = "support.rs"] mod support;` to pull in a
# shared spinner/checkmark helper. The pattern, naming (one-word file
# name) and structure match the style used across sebastienrousseau/*
# crates (e.g. `noyalib/examples`).
[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "context"
path = "examples/context.rs"

[[example]]
name = "cache"
path = "examples/cache.rs"

[[example]]
name = "engine"
path = "examples/engine.rs"

[[example]]
name = "errors"
path = "examples/errors.rs"

[[example]]
# Gated behind `remote-templates`; without the feature the example
# prints a hint telling the user how to enable it.
name = "remote"
path = "examples/remote.rs"

[[example]]
# Drops staticweaver into a minimal Axum web server so the
# integration recipe is testable end-to-end. Opt-in because axum +
# tokio are heavy. Run with:
#   cargo run --example axum --features axum-example
name = "axum"
path = "examples/axum.rs"
required-features = ["axum-example"]

# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------
[[bench]]
# Benchmarking configuration for performance testing.
name = "template_benchmark"                   # Name of the benchmark
harness = false                             # Disable the default benchmark harness (used by Criterion)

[[bench]]
# Comparative matrix vs Tera, Minijinja, and Askama. Uses the same
# Criterion harness; produces one comparison group per workload so
# `cargo bench --bench comparative` prints all four engines side by side.
name = "comparative"
path = "benches/comparative.rs"
harness = false

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------
[package.metadata.docs.rs]
# Settings for building and hosting documentation on docs.rs.
all-features = true                         # Build documentation with all features enabled
rustdoc-args = ["--cfg", "docsrs"]          # Arguments passed to `rustdoc` when building the documentation
targets = ["x86_64-unknown-linux-gnu"]      # Default target platform for the docs

# -----------------------------------------------------------------------------
# Linting Configuration
# -----------------------------------------------------------------------------
[lints.rust]
# Linting rules for the project.

## Warnings
missing_copy_implementations = "warn"       # Warn if types can implement `Copy` but don’t
missing_docs = "warn"                       # Warn if public items lack documentation
unstable_features = "warn"                  # Warn on the usage of unstable features
unused_extern_crates = "warn"               # Warn about unused external crates
unused_results = "warn"                     # Warn if a result type is unused (e.g., errors ignored)

## Allowances
bare_trait_objects = "allow"                # Allow bare trait objects (e.g., `Box<dyn Trait>`)
elided_lifetimes_in_paths = "allow"         # Allow lifetimes to be elided in paths
non_camel_case_types = "allow"              # Allow non-camel-case types
non_upper_case_globals = "allow"            # Allow non-uppercase global variables
trivial_bounds = "allow"                    # Allow trivial bounds in trait definitions
unsafe_code = "forbid"                      # Forbid unsafe code (crate uses #![forbid(unsafe_code)])

## Forbidden
missing_debug_implementations = "forbid"    # Forbid missing `Debug` implementations
non_ascii_idents = "forbid"                 # Forbid non-ASCII identifiers
unreachable_pub = "forbid"                  # Forbid unreachable `pub` items

## Denials
dead_code = "deny"                          # Deny unused, dead code in the project
deprecated_in_future = "deny"               # Deny code that will be deprecated in the future
ellipsis_inclusive_range_patterns = "deny"  # Deny usage of inclusive ranges in match patterns (`...`)
explicit_outlives_requirements = "deny"     # Deny unnecessary lifetime outlives requirements
future_incompatible = { level = "deny", priority = -1 } # Handle future compatibility issues
keyword_idents = { level = "deny", priority = -1 }      # Deny usage of keywords as identifiers
macro_use_extern_crate = "deny"             # Deny macro use of `extern crate`
meta_variable_misuse = "deny"               # Deny misuse of meta variables in macros
noop_method_call = "deny"                   # Deny method calls that have no effect
rust_2018_idioms = { level = "deny", priority = -1 }    # Enforce Rust 2018 idioms
rust_2021_compatibility = { level = "deny", priority = -1 } # Enforce Rust 2021 compatibility
single_use_lifetimes = "deny"               # Deny lifetimes that are used only once
trivial_casts = "deny"                      # Deny trivial casts (e.g., `as` when unnecessary)
trivial_numeric_casts = "deny"              # Deny trivial numeric casts (e.g., `i32` to `i64`)
unused = { level = "deny", priority = -1 }  # Deny unused code, variables, etc.
unused_features = "deny"                    # Deny unused features
unused_import_braces = "deny"               # Deny unnecessary braces around imports
unused_labels = "deny"                      # Deny unused labels in loops
unused_lifetimes = "deny"                   # Deny unused lifetimes
unused_macro_rules = "deny"                 # Deny unused macros
unused_qualifications = "deny"              # Deny unnecessary type qualifications
variant_size_differences = "deny"           # Deny enum variants with significant size differences

# Clippy `all` is already warn by default; we list it explicitly so future
# contributors see where to add lints. Pedantic/nursery are intentionally
# left off — they generate churn that belongs in a follow-up rather than
# red-lining CI on every `-D warnings` build.
[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
too_many_arguments = "allow"

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
# Development profile configuration for fast builds and debugging.
codegen-units = 256                         # Increase codegen units for faster compilation
debug = true                                # Enable debugging symbols
debug-assertions = true                     # Enable debug assertions
incremental = true                          # Enable incremental compilation
lto = false                                 # Disable link-time optimization for development
opt-level = 0                               # No optimizations in development
overflow-checks = true                      # Enable overflow checks for arithmetic operations
panic = 'unwind'                            # Enable unwinding for panics (useful in development)
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in development builds

[profile.release]
# Release profile configuration for optimized builds.
codegen-units = 1                           # Reduce codegen units for better performance
debug = false                               # Disable debug symbols in release builds
debug-assertions = false                    # Disable debug assertions
incremental = false                         # Disable incremental compilation for optimal binary size
lto = true                                  # Enable link-time optimization for smaller and faster binaries
opt-level = "z"                             # Optimize for binary size
overflow-checks = false                     # Disable overflow checks for performance
panic = "abort"                             # Use abort on panic for minimal overhead
rpath = false                               # Disable rpath generation
strip = "symbols"                           # Strip symbols for smaller binary size

[profile.test]
# Test profile configuration for debugging and development.
codegen-units = 256                         # Increase codegen units for faster test builds
debug = true                                # Enable debugging symbols for test builds
debug-assertions = true                     # Enable debug assertions for tests
incremental = true                          # Enable incremental compilation for tests
lto = false                                 # Disable link-time optimization during testing
opt-level = 0                               # No optimizations in test builds
overflow-checks = true                      # Enable overflow checks for tests
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in test builds
